[project]
name = "0-integrated-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.0.0",
    "matplotlib>=3.3.0",
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "openpyxl>=3.0.0",
    "pandas>=1.3.0",
    "piexif>=1.1.0",
    "pillow>=8.0.0",
    "pyperclip>=1.8.0",
    "requests>=2.25.0",
    "send2trash>=1.8.0",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.12.0",
    "python-docx>=0.8.11",
]
